--- a/src/peakrdl_python/templates/addrmap_memory.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_memory.py.jinja
@@ -123,7 +123,7 @@ class {{node.python_class_name}}_array({{node.base_class(asyncoutput)}}{% if leg
                          stride=stride, dimensions=dimensions)
 
     @property
-    def _element_datatype(self) -> Type[Node]:
+    def _element_datatype(self) -> Type[{{node.base_class(asyncoutput)}}]:
         return {{node.python_class_name}}
 
     {{ universal_properties(node.instance) }}
