Update all the copyright messages to 2025

--- a/src/peakrdl_python/templates/example.py.jinja
+++ b/src/peakrdl_python/templates/example.py.jinja
@@ -1,4 +1,20 @@
+{#
+peakrdl-python is a tool to generate Python Register Access Layer (RAL) from SystemRDL
+Copyright (C) 2021 - 2025
 
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <https://www.gnu.org/licenses/>.
+#}
 from {% if skip_lib_copy %}peakrdl_python.{% else %}.{% endif %}lib import {% if asyncoutput %}Async{% else %}Normal{% endif %}CallbackSet{% if legacy_block_access %}Legacy{% endif %}
 
 from .reg_model.{{top_node.inst_name}} import {{top_node.inst_name}}_cls
