--- a/src/peakrdl_python/templates/addrmap_register.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_register.py.jinja
@@ -168,6 +168,8 @@ class {{node.python_class_name}}({{node.base_class(asyncoutput)}}):
 class {{node.python_class_name}}_array({{node.base_class(asyncoutput)}}Array):
     """
     Class to represent a register array in the register model
+
+    {{get_table_block(node.instance) | indent}}
     """
     __slots__: list[str] = []
 
